[gd_scene load_steps=7 format=2]

[ext_resource path="res://assets/fonts/Valera.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://assets/images/paper.png" type="Texture" id=2]
[ext_resource path="res://scripts/GenerateCharacter.gd" type="Script" id=3]
[ext_resource path="res://assets/images/playericons/outline.png" type="Texture" id=4]

[sub_resource type="DynamicFont" id=1]
size = 26
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 1 )

[node name="PlayerCard" type="TextureRect"]
margin_right = 308.0
margin_bottom = 433.0
texture = ExtResource( 2 )
stretch_mode = 1
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -79.0
margin_right = 79.0
margin_bottom = 158.0
texture = ExtResource( 4 )
stretch_mode = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Name" type="Label" parent="TextureRect"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -49.0
margin_top = 4.0
margin_right = 38.0
margin_bottom = 33.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Daniel DeLamon"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="feature1" type="TextureRect" parent="TextureRect"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="feature2" type="TextureRect" parent="TextureRect"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -130.0
margin_top = -230.0
margin_right = 130.0
margin_bottom = -15.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Trait1" type="Label" parent="VBoxContainer"]
margin_right = 260.0
margin_bottom = 16.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Trait: Can never lie"
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Trait2" type="Label" parent="VBoxContainer"]
margin_top = 20.0
margin_right = 260.0
margin_bottom = 55.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Forger: Can spread rumors pretending to be someone else"
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Trait3" type="Label" parent="VBoxContainer"]
visible = false
margin_top = 59.0
margin_right = 260.0
margin_bottom = 151.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Bartender: Can pass a rumor they recieve straight onto others as if it's from that person
"
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -48.0
margin_top = -30.0
margin_right = 48.0
margin_bottom = -10.0
text = "Generate"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
